HLT-3808 fix some styles resulting in copy being cut off if it was too lengthy.

--- a/src/main/webapp/bundles/health_v4/less/results/results.less
+++ b/src/main/webapp/bundles/health_v4/less/results/results.less
@@ -265,6 +265,10 @@
         .featureValue {
           text-align: right;
           width: 40%;
+          @media(@xs) {
+            word-wrap: break-word;
+            font-size: 12px;
+          }
         }
 
       }
